fix: spline dark mode

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -118,6 +118,7 @@
   }
   html {
     @apply scroll-smooth;
+    color-scheme: normal !important;
   }
   body {
     @apply bg-background text-foreground;
